[package]
name = "derive_enum"
version = "0.1.0"
authors = ["chankyin <chankyin1970@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Enum derive macros for Rust 2018"
repository = "https://github.com/chankyin/derive_enum.git"
homepage = "https://github.com/chankyin/derive_enum"

[features]
default = ["name", "from_str"]
name = ["derive_enum_macros", "derive_enum_macros/name"]
from_str = ["derive_enum_macros", "derive_enum_macros/from_str"]

[dependencies]
derive_enum_macros = {version = "0.1", path = "../derive_enum_macros", optional = true}
